Fixes: horizontal scrolling bar and scrolling in mobile menu

--- a/src/sass/layout/_site.scss
+++ b/src/sass/layout/_site.scss
@@ -9,7 +9,6 @@
 
 .site-layout {
   position: relative;
-  min-width: 100vw;
   min-height: 100vh;
 
   @include root-has-class("light-theme") {
@@ -44,21 +43,18 @@
 
   .mobile-menu-container {
     position: absolute;
+    top: 0;
+    left: 0;
     z-index: 1;
-    width: 100vw;
-    min-height: 100vh;
-    overflow-y: scroll;
+    width: 100%;
+    height: 100%;
     @include transition(background-color 300ms ease-out);
   }
 
   .content-container {
     position: relative;
     z-index: 2;
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
     visibility: visible;
-    overflow-y: scroll;
     transition: background-color 300ms ease-out, transform 600ms ease-out,
       opacity 300ms ease-out;
   }
@@ -67,10 +63,10 @@
     .content-container {
       @include opacity(0);
       visibility: hidden;
-      // @include scale(0);
 
-      // THIS REMOVE THE ELEMENT FROM THE HTML FLOW AND THE PAGE IS SHRINK TO THE HEIGHT OF THE MOBILE MENU
-      position: absolute;
+      // It changes the element to be the same height as the whole screen so there's not content for scrolling
+      height: 100vh;
+      overflow: hidden;
     }
   }
 }
